# multi-util

./: CHANGELOG.md  Cargo.toml
.github/workflows/: rust.yml
src/: base_encoded.rs  base_encoder.rs  base_util.rs  codec_info.rs  encoding_info.rs  error.rs  lib.rs  varbytes.rs  varuint.rs
src/serde/: de.rs  mod.rs  ser.rs
