[package]
name = "multi-util"
version = "1.0.0"
edition = "2021"
authors = ["Dave Huseby <dwh@linuxprogrammer.org>"]
description = "Multiformat utility functions and types"
repository = "https://github.com/cryptidtech/multi-util.git"
readme = "README.md"
license = "Apache-2.0"
keywords = ["multiformats", "multicodec", "multibase", "encoding"]
categories = ["encoding"]

[features]
default = ["serde"]

[dependencies]
multi-base = { version = "1.0", path = "../multi-base" }
multi-codec = { version = "1.0", path = "../multi-codec" }
multi-trait = { version = "1.0", path = "../multi-trait" }
serde = { version = "1.0", default-features = false, features = ["alloc"], optional = true }
thiserror = { version = "2.0" }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
hex = "0.4"
proptest = "1.4"
serde_cbor = "0.11"
serde_json = "1.0"
serde_test = "1.0"