[package]
name = "multi-util"
version = "1.0.5"
edition = "2024"
rust-version = "1.85"
authors = ["Dave Huseby <dwh@linuxprogrammer.org>"]
description = "Multiformat utility functions and types"
repository = "https://github.com/cryptidtech/multi-util.git"
readme = "README.md"
license = "Apache-2.0"
keywords = ["multiformats", "multicodec", "multibase", "encoding"]
categories = ["encoding"]

[features]
default = ["serde"]

[dependencies]
multi-base = "1.0"
multi-codec = "1.0"
multi-trait = "1.0"
serde = { version = "1.0", default-features = false, features = ["std"], optional = true }
thiserror = { version = "2.0" }

[dev-dependencies]
ciborium = "0.2"
criterion = { version = "0.8", features = ["html_reports"] }
hex = "0.4"
proptest = "1.4"
serde_json = "1.0"
serde_test = "1.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lints.rust]
unsafe_code = "deny"
